# KFilter

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  KFilter.cpp  KFilter.h  README.md  test_filter.cpp
include/: Exceptions.h  KFilter.h
src/: KFilter.cpp
